Fix Review footer gap

--- a/src/Review/Review.css
+++ b/src/Review/Review.css
@@ -1,7 +1,7 @@
 .review {
     display: grid;
     align-content: space-between;
-    gap: 56px;
+    gap: 40px;
     height: 100%;
     padding: 20px;
 }
@@ -13,9 +13,8 @@
 .review__footer {
     display: grid;
     justify-content: space-between;
-    align-items: center;
+    align-items: end;
     grid-template-rows: auto auto;
-    gap: 8px;
 }
 
 .review__avatar {
